fix content wrapping in apidoc

--- a/styles/apidoc.scss
+++ b/styles/apidoc.scss
@@ -1,3 +1,7 @@
+div.overFlowHidden {
+  overflow: hidden;
+}
+
 div.apidocContentWrapper {
   overflow: hidden;
   word-wrap: break-word;
